RESOLVED FIXED145133
[EFL] dimmed area for popup does not cover the fullscreen mode.
https://bugs.webkit.org/show_bug.cgi?id=145133
Summary [EFL] dimmed area for popup does not cover the fullscreen mode.
KwangHyuk
Reported 2015-05-18 11:03:49 PDT
Created attachment 253332 [details] screenshot for problem situation Reproduce site : http://robnyman.github.io/fullscreen/
Attachments
screenshot for problem situation (64.65 KB, image/png)
2015-05-18 11:03 PDT, KwangHyuk
no flags
Patch (2.62 KB, patch)
2015-05-18 11:36 PDT, KwangHyuk
no flags
Patch (2.61 KB, patch)
2015-06-10 09:01 PDT, KwangHyuk
no flags
KwangHyuk
Comment 1 2015-05-18 11:36:56 PDT
KwangHyuk
Comment 2 2015-06-10 09:01:34 PDT
Gyuyoung Kim
Comment 3 2015-06-10 23:09:16 PDT
Comment on attachment 254655 [details] Patch r=me. Thanks !
WebKit Commit Bot
Comment 4 2015-06-10 23:56:22 PDT
Comment on attachment 254655 [details] Patch Clearing flags on attachment: 254655 Committed r185449: <http://trac.webkit.org/changeset/185449>
WebKit Commit Bot
Comment 5 2015-06-10 23:56:26 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.