[EFL] dimmed area for popup does not cover the fullscreen mode. https://bugs.webkit.org/show_bug.cgi?id=145133

Reviewed by Gyuyoung Kim.

By calling elm_win_resize_object_add(), popup was added as a resize object of elm_win.
as a result, popup can cover the fullscreen area when it enters a fullscreen mode.

* MiniBrowser/efl/main.c:
(on_fullscreen_accept):
(on_fullscreen_deny):
(on_fullscreen_enter):


Canonical link: https://commits.webkit.org/163918@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185449 268f45cc-cd09-0410-ab3c-d52691b4dbfc